deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetcore-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetcore
  template:
    metadata:
      labels:
        app: dotnetcore
    spec:
      containers:
      - name: dotnetcore
        image: cringbltdevmotif.azurecr.io/webapplication1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "1"
            memory: "500Mi"
          requests:
            cpu: "0.5"
            memory: "200Mi"
